--- a/src/main.css
+++ b/src/main.css
@@ -327,24 +327,25 @@
     text-align: center;
     color: #426968; }
   .designathon .button-small {
-    background-color: transparent;
+    background-color: #C9EDBD;
     font-family: "Poppins";
-    border: 3px solid #303030;
-    color: #303030;
-    font-size: 24px;
-    line-height: 1;
-    padding: 8px 24px 8px;
+    border: 2.07877px solid #FFFFFF;
     border-radius: 13px;
-    transition: all .3s ease;
-    cursor: pointer; }
+    transition-property: background-color,border-color,color,box-shadow,filter,transform;
+    transition-duration: .3s;
+    cursor: pointer;
+    padding: 8px 16px 8px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 13px;
+    line-height: 40px;
+    text-align: center;
+    color: #426968; }
   .designathon .button-small:hover {
-    background-color: white;
-    border: 3px solid white;
-    color: #303030;
-    font-size: 24px;
-    line-height: 1;
-    padding: 8px 24px 8px;
-    border-radius: 13px; }
+    background-color: #fff;
+    box-shadow: 0px 15px 20px rgba(179, 179, 179, 0.4);
+    color: #000;
+    transform: translateY(-3px); }
   .designathon .button:hover {
     background-color: #fff;
     box-shadow: 0px 15px 20px rgba(179, 179, 179, 0.4);
@@ -649,5 +650,7 @@
     border: solid 1px transparent; }
   .designathon .toggle-switch.active .toggle-knob {
     margin-left: 24px; }
+  .designathon .quick-link {
+    border-radius: 12px; }
 
 /*# sourceMappingURL=main.css.map */
