--- a/src/main.scss
+++ b/src/main.scss
@@ -384,25 +384,26 @@
         color: #426968;
     }
     .button-small {
-        background-color: transparent;
+        background-color: #C9EDBD;
         font-family: "Poppins";
-        border: 3px solid #303030;
-        color: #303030;
-        font-size: 24px;
-        line-height: 1;
-        padding: 8px 24px 8px;
+        border: 2.07877px solid #FFFFFF;
         border-radius: 13px;
-        transition: all .3s ease; 
+        transition-property: background-color,border-color,color,box-shadow,filter,transform;
+        transition-duration: .3s;
         cursor: pointer;
+        padding: 8px 16px 8px;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 13px;
+        line-height: 40px;
+        text-align: center;
+        color: #426968;
     }
     .button-small:hover {
-        background-color: white;
-        border: 3px solid white;
-        color: #303030;
-        font-size: 24px;
-        line-height: 1;
-        padding: 8px 24px 8px;
-        border-radius: 13px; }
+        background-color: #fff;
+        box-shadow: 0px 15px 20px rgba(179, 179, 179, 0.4);
+        color: #000;
+        transform: translateY(-3px); }
     .button:hover {
         background-color: #fff;
         box-shadow: 0px 15px 20px rgba(179, 179, 179, 0.4);
@@ -761,5 +762,9 @@
     
     .toggle-switch.active .toggle-knob {
         margin-left: 24px;
+    }
+    
+    .quick-link{
+        border-radius: 12px;
     }
 }
