--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 @import url("https://use.typekit.net/gyk8zus.css");
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,700;1,400&display=swap');
 @font-face{
   font-family: "iAWriterMono";
   src: url("./fonts/iAWriterMonoS-Regular.woff2") format('woff2');
