--- a/src/main.scss
+++ b/src/main.scss
@@ -8,26 +8,26 @@
         font-weight: 700;
         font-style: normal;
         font-size: 96px;
-        letter-spacing: 0.05em;
+        // letter-spacing: 0.05em;
     }
     .h2{
         font-family: "new-spirit-condensed", serif;
         font-weight: 700;
         font-style: normal;
         font-size: 72px;
-        letter-spacing: 0.05em;
+        // letter-spacing: 0.05em;
     }
     .b1{
         font-family: "bookmania", serif;
         font-size: 24px;
         font-weight: 400;
-        letter-spacing: 0.01em;
+        // letter-spacing: 0.01em;
     }
     .b2{
         font-family: "bookmania", serif;
         font-size: 16px;
         font-weight: 400;
-        letter-spacing: 0.01em;
+        // letter-spacing: 0.01em;
     }
     .poppins{
         font-family: "Poppins" !important;
@@ -35,7 +35,7 @@
     .date{
         font-family: "Poppins";
         font-size: 36px;
-        letter-spacing: 0.055em;
+        // letter-spacing: 0.055em;
     }
     .button{
         background-color: black;
@@ -48,7 +48,7 @@
         transition-property: background-color,border-color,color,box-shadow,filter,transform;
         transition-duration: .3s;
         border-width: 0;
-        letter-spacing: 2px;
+        // letter-spacing: 2px;
         width: 392px;
         display: block;
         border: none;
@@ -229,20 +229,20 @@
             font-weight: 700;
             font-style: normal;
             font-size: 56px;
-            letter-spacing: 0.05em;
+            // letter-spacing: 0.05em;
         }
         .h2{
             font-family: "new-spirit-condensed", serif;
             font-weight: 700;
             font-style: normal;
             font-size: 72px;
-            letter-spacing: 0.05em;
+            // letter-spacing: 0.05em;
         }
         .b1{
             font-family: "bookmania", serif;
             font-size: 24px;
             font-weight: 400;
-            letter-spacing: 0.01em;
+            // letter-spacing: 0.01em;
         }
         .button{
             width: 256px;
@@ -298,11 +298,13 @@
     }
 }
 
-.designathon{
-    background-image: url("/images/designathon/grid.png");
+.projects{
+    background-image: url("/images/projects/gradient.png");
     padding-top: 132px;
-    background-color: #C1F0E5;
-    color: #426968; 
+    background-color: #FFFFFF;
+    background-repeat: no-repeat;
+    background-size: contain;
+    color: #000000; 
     a.link{
         text-decoration: underline;
         color: #356A69;
@@ -313,57 +315,64 @@
         transition: all 200ms ease;
       }
     .h1 {
-        font-family: "Mechanical", serif;
-        /* font-weight: 700; */
+        font-family: "DM Sans";
+        font-weight: 700;
         font-style: normal;
-        font-size: 3.6458333333333335vw;
-        letter-spacing: 0.05em; }
+        font-size: 5.55vw;
+        // letter-spacing: 0.05em; 
+    }
     .h2 {
         font-family: "Poppins", sans-serif;
         font-weight: 700;
         font-style: normal;
         font-size: 36px; }
     .h3 {
-        font-family: "Mechanical", serif;
+        font-family: "DM Sans", serif;
         /* font-weight: 700; */
         font-style: normal;
         font-size: 8vw;
-        letter-spacing: 0.05em;
+        // letter-spacing: 0.05em;
     }
     .h4{
-        font-family: "Mechanical", serif;
+        font-family: "DM Sans", serif;
         /* font-weight: 700; */
         font-style: normal;
-        font-size: 33px;
-        letter-spacing: 0.05em;
+        font-size: 25px;
+        // letter-spacing: 0.05em;
     }
     .h5{
-        font-family: "Mechanical", serif;
+        font-family: "DM Sans", serif;
         /* font-weight: 700; */
         font-style: normal;
         font-size: 18px;
-        letter-spacing: 0.05em;
+        // letter-spacing: 0.05em;
     }
     .b1 {
-        font-family: "Poppins", sans-serif;
+        font-family: "DM Sans", sans-serif;
         font-size: 24px;
         font-weight: 300;
-        letter-spacing: 0.01em; }
+        // letter-spacing: 0.01em; 
+    }
     .b2 {
         font-family: "Poppins", sans-serif;
         font-size: 20px;
         font-weight: 300;
-        letter-spacing: 0.01em; }
+        // letter-spacing: 0.01em; 
+    }
     .b3 {
         font-family: "Poppins", sans-serif;
         font-size: 18px;
         font-weight: 300;
-        letter-spacing: 0.01em; }
+        // letter-spacing: 0.01em; 
+    }
     .bold{
         font-weight: 700 !important;
     }
     .semibold{
         font-weight: 600 !important;
+    }
+    .italic{
+        font-style: italic !important;
     }
     .poppins {
         font-family: "Poppins" !important; }
@@ -523,7 +532,7 @@
         margin: 12px; }
     .section-1 {
         padding-top: 96px;
-        height: 100vh;
+        height: 80vh;
     }
     .section-2 {
         background-color: #325C5C;
