--- a/src/main.scss
+++ b/src/main.scss
@@ -482,8 +482,11 @@
         background-clip: text;
         color: transparent; }
     .header {
-        top: 36px;
-        padding: 0; }
+        top: 0;
+        padding-left: 5%;
+        padding-right: 5%;
+        background-color: #000;
+    }
     .pointer {
         pointer-events: none;
         display: block; }
@@ -545,6 +548,15 @@
         padding-top: 96px;
         // min-height: 100vh;
         padding-bottom: 96px;
+        a{
+            text-decoration: underline;
+            color: #1BB994;
+            transition: all 200ms ease;
+          }
+          a:hover{
+            color: #356A69;
+            transition: all 200ms ease;
+          }
     }
     .section-3-box{
         display: grid;
@@ -556,6 +568,15 @@
         padding-top: 100px;
         padding-bottom: 100px;
         // min-height: 100vh;
+        a{
+            text-decoration: underline;
+            color: #1BB994;
+            transition: all 200ms ease;
+          }
+          a:hover{
+            color: #356A69;
+            transition: all 200ms ease;
+          }
     }
     .section-5 {
         padding-top: 56px;
@@ -718,7 +739,7 @@
       }
     .prototypeGraphic{
         left: 60%;
-        top: 0%;
+        top: 52px;
     }
     #prototypeGraphic {
         width: 62.5vw;
@@ -796,5 +817,49 @@
             transition: opacity 200ms linear, visibility 0 linear 200ms;
         }
     }
+    .imageContainer{
+        top: 80px;
+        pointer-events: none;
+        .arrow-down{
+            pointer-events: all;
+        }
+    }
+    a:hover {
+        opacity: 100;
+    }
+}
 
+.projects-header {
+    display: flex;
+    background-color: black;
+    padding-left: 9%;
+    padding-right: 9%;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 6px;
+    .tablist {
+        display: flex;
+        width: 33%;
+        justify-content: space-between;
+        align-items: center;
+        font-size: 24px;
+        font-family: "Poppins";
+        padding-top: 6px;
+      }
+      .tablist-small {
+          display: flex;
+          width: 75%;
+          justify-content: space-between;
+          align-items: center;
+          font-size: 18px;
+          font-family: "Poppins";
+      }
+      .tab {
+          color: white;
+          transition: all 200ms ease;
+      }
+      .tab:hover {
+          color: #1BB994;
+          transition: all 200ms ease;
+      }
 }
